# libibuddy

./: CMakeLists.txt  Changes  README.md
src/: CMakeLists.txt  ibuddy.c  ibuddy.h  ibuddy_internal.h  util.c  util.h
test/: CMakeLists.txt  run_test.c
tools/: CMakeLists.txt  ibuddycmd.c
